[package]
name = "kreato-payment"
version = "0.1.0"
description = "KreatoPayment — splits every payment between creator and platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kreato_payment"
doctest = false

[features]
default = []

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }